# az-static-web-app-docs-template

./: .gitignore  .pre-commit-config.yaml  README.md  main.html  pyproject.toml  routes.json  setup.cfg  staticwebapp.config.json
.github/: dependabot.yml
.github/workflows/: azure-static-web-apps-agreeable-forest-053a31803.yml  azure-static-web-apps-ambitious-rock-029e94603.yml  azure-static-web-apps-ashy-island-08c773b03.yml  azure-static-web-apps-blue-tree-012128503.yml  azure-static-web-apps-brave-tree-035ee0c03.yml  azure-static-web-apps-calm-forest-0b1ce0403.yml  azure-static-web-apps-gray-mushroom-0fc4d4c03.yml  azure-static-web-apps-green-moss-0ea2cc203.yml  azure-static-web-apps-icy-stone-0ba1a4203.yml  azure-static-web-apps-jolly-beach-079c21b03.yml  azure-static-web-apps-kind-cliff-066ef2303.yml  azure-static-web-apps-kind-stone-001eb1d03.yml  azure-static-web-apps-lemon-desert-06a4b4c03.yml  azure-static-web-apps-lemon-mud-04715af03.yml  azure-static-web-apps-lemon-river-07801140f.yml  azure-static-web-apps-lively-meadow-08adef303.yml  azure-static-web-apps-lively-pond-0351acf03.yml  azure-static-web-apps-mango-ground-0e0d06203.yml  azure-static-web-apps-orange-cliff-019eb8803.yml  azure-static-web-apps-proud-beach-00a1e4b03.yml  azure-static-web-apps-proud-flower-047ccdb03.yml  azure-static-web-apps-proud-wave-08f873503.yml  azure-static-web-apps-purple-glacier-025f0d303.yml  azure-static-web-apps-red-field-01d6e5103.yml  azure-static-web-apps-white-water-04aa1d903.yml  azure-static-web-apps-wonderful-island-01a3e8903.yml  azure-static-web-apps-wonderful-island-02ae94703.yml  azure-static-web-apps-zealous-rock-015e72703.yml  azure-static-web-apps-zealous-tree-0c6199710.yml  deploy-site.yml  lint-and-format.yml
api/: package-lock.json  package.json
api/GetRoles/: function.json  index.js
azure-web-app-deployer/: deployment_wizard.ps1  main.bicep
deploy/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
docs/:  routes.json  doc_index.html  index.html  mkdocs.yml
docs/_build/: authenticated.html  doc_index.html  index.html
docs/_build/sphinx-example/: .buildinfo  index.html
docs/source/equinor-example/: README.md  mkdocs.yml
img/: architecture.drawio
(+12 files in other folders)
