[tool.poetry]
name = "az-static-web-app-docs-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
mkdocs = "^1.2.4"
mkdocs-material = "^8.2.7"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-mermaid2-plugin = "^1.0.1"
myst-parser = "^0.18.0"
sphinx = "^4.3.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
