[tool.poetry]
name = "az-static-web-app-docs-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.8"
mkdocs = "^1.2.4"
mkdocs-material = "^9.4.1"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-mermaid2-plugin = "^1.1.0"
myst-parser = "^1.0.0"
sphinx = "^5.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^23.9.1"
mypy = "^1.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
