[tool.poetry]
name = "Deploy"
version = "0.1.0"
description = ""
authors = ["Equinor"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pulumi = "^3.19.0"
pulumi-azure-native = "^1.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
